<?xml version="1.0"?>
<package>
  <name>roch_viz</name>
  <version>1.0.6</version>
  <description>Visualization configuration for SawYer roch</description>

  <author email="wzhang@softrobtech.com">Carl</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>
=

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>

  <run_depend>roch_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
